[package]
edition = "2018"
name = "sn_api-nodejs"
version = "0.0.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
#napi = "1"
napi = { version = "1", features = ["tokio_rt", "napi6", "serde-json"]}
napi-derive = "1"

#sn_api = { git = "https://github.com/maidsafe/sn_api.git" }
sn_api = { git = "https://github.com/b-zee/sn_api.git", branch = "pr-aliasing" }
tokio = { version = "1", features = ["full"] }
tokio-compat-02 = "0.2.0"

rand = "~0.7.3"
bincode = "1.3.1"

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
