[package]
edition = "2018"
name = "sn_nodejs"
version = "0.0.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1"
env_logger = "0.8"
log = "0.4"
napi = { version = "1", features = ["tokio_rt", "napi6", "serde-json"]}
napi-derive = "1"
rand = "0.7"
sn_api = { git = "https://github.com/b-zee/sn_api.git", branch = "pr-aliasing" }
tokio = { version = "1", features = ["full"] }
tokio-compat-02 = "0.2"

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
