[package]
name = "sn_nodejs"
version = "0.11.0"
authors = ["Josh Wilson <joshuef@gmail.com>", "Gabriel Viganotti <gabrielviganotti@gmail.com>"]
license = "MIT OR BSD-3-Clause"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "sn_nodejs"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "~0.4.0"

[dependencies]
env_logger = "~0.7.1"
log = "~0.4.8"
neon = { version = "~0.4.0", features = ["event-handler-api"] }
neon-serde = "~0.4.0"
sn_api = { package = "safe-api", version = "0.15.0", features = ["app", "authd_client"] }
tokio = { version = "~0.2.21", features = ["rt-core"] }

[features]
scl-mock = ["sn_api/scl-mock"]
