[package]
name = "sn_nodejs"
version = "0.11.0"
authors = ["Josh Wilson <joshuef@gmail.com>", "Gabriel Viganotti <gabrielviganotti@gmail.com>"]
license = "MIT OR BSD-3-Clause"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "sn_nodejs"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "~0.7.0"

[dependencies]
env_logger = "~0.7.1"
log = "~0.4.8"
neon = { version = "~0.7.0", features = ["event-handler-api"] }
neon-serde = {git="https://github.com/lucasfernog/neon-serde", branch="refactor/update-neon-0.7"}
sn_api = { version = "0.18.0", features = ["app", "authd_client"] }
tokio = { version = "~0.2.21", features = ["rt-core"] }
